# Asset-Control-Engine

./: README.md  assect_control_engine_infrastructure_3.txt  asset_control_engine_infrastructure_1.txt  asset_control_engine_infrastructure_2.txt  asset_control_engine_infrastructure_5.txt  asset_control_infrastructure_4.txt  asset_control_infrastructure_6.txt  asset_control_infrastructure_7.txt  asset_control_infrastructure_8.txt  asset_control_infrastructure_9.txt  components_checklist.txt  it_asset_inventory_and_checklist_suite_components_checklist.txt  layout_overview_asset_control_engine.txt  oidc_and_oauth2_integration_blueprint.txt  reconcilliation_engine_outline.txt  reconcilliation_engine_overview.txt  reconcilliation_parameters_for_reconcilliation_engine.txt
api/: Dockerfile  auth.py  dependencies.py  pyproject.toml
api/api/: audit.py  config.json  db.py  main.py  matcher.py  models.py
api/tests/: test_reconciliation.py
data/: generate_seeds.py
dinfra/: docker-compose.yml
docs/: architecture.md
infra/ci/: reconciliation-ci.yml
infra/migrations/: 001_create_schema.sql
opa/policies/: attribute_authority.rego  mfa_and_evidence.rego  rbac.rego  reconciliation.rego
scripts/: import_csv.py
ui/: Dockerfile  tsconfig.json
ui/src/: App.tsx
ui/src/components/: ChecklistRunner.tsx  InventoryTable.tsx  TemplateEditor.tsx
ui/src/services/: api.ts
